@@ -227,7 +227,10 @@ Functionality:
 - File is now always verified - if md5 is not selected, then Adler32 is used
 
 - New / changed flags: 
-    --sam (new flag) --fastq for genounzip/genocat - to allow SAM/BAM to be reconstructed as SAM, BAM or FASTQ
+    --sam (new flag) for genounzip/genocat - reconstruct a SAM/BAM file as SAM
+    --bam (new flag) for genounzip/genocat - reconstruct a SAM/BAM file as BAM
+    --no-PG (new flag) refrain from adding a @PG record to the header when converting SAM->BAM or BAM->SAM
+    --fastq (new flag) for genounzip/genocat - reconstruct a SAM/BAM file as FASTQ
     --vcf (new flag) genounzip/genocat - reconstruct a 23andMe file as a VCF
     --plain (new flag) in genounzip / genocat - negates implicit --bgzf
     --dump-local and --dump-b250 (renamed from dump-one-local and dump-one-b250) now output a file per VB
